<resources>
    <string name="app_name">Sensor Collector</string>
    <string name="text_list_of_sensors">List of Scanned Sensors</string>
    <string name="action_settings">Settings</string>
    <string name="action_test_device">Check Device is Supported</string>
    <string name="show_available_drivers">Show Available Drivers</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Sensor Serial Recorder</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="record_service_channel_name">USB Serial Sensor Recorder Service</string>
    <string name="record_service_channel_info">Recording to %1$s. Click to back to app</string>
    <string name="record_service_channel_stopping">Stopping recording and saving recordings to %1$s</string>
    <string name="record_activity_info_detailed">
        Recording is in progress, click button below to stop recording. \nPath: %1$s \nIncluded devices: \n%2$s
    </string>
    <string name="next">Next</string>
    <string name="scan_serial">🔍 Scan Serial</string>
    <string name="start_recoding">▶️ Start Recoding</string>
    <string name="previous">Previous</string>
    <string name="scan_bluetooth">▶️ Start Scan Bluetooth</string>
    <string name="scan_bluetooth_stop">⏹️ Stop Scan Bluetooth</string>
    <string name="name_filter">Name Filter (Regex supported)</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="output_format">Output Format</string>
    <string name="permissions_not_granted">Permissions not granted, some features may not work. \nPlease grant all permissions and press OK to continue.</string>
    <string name="permissions_required">Permissions required</string>
    <string name="about">About</string>
    <string name="menu_bluetooth_beacon_scanner">Bluetooth Beacon Scanner</string>
    <string name="menu_usb_serial_sensor_recorder">USB Serial Sensor Recorder</string>
    <string name="scan_settings">Scan Settings</string>
    <string name="ble_only">BLE Only</string>
    <string name="quick_scan">Fast Scan</string>
    <string name="show_unnamed">Show Unnamed</string>

    <string name="phy_default">Default PHY</string>
    <string name="phy_1m">LE 1M</string>
    <string name="phy_2m">LE 2M</string>
    <string name="le_phy">LE PHY</string>
    <string name="phy_coded_s2">LE Coded S2</string>
    <string name="phy_coded_s8">LE Coded S8</string>
    <string name="clear">❌ Clear</string>
    <string name="show_unknown">Show Unknown</string>

    <string-array name="ble_phy">
<!--        <item>All PHY</item>-->
<!--        <item>LE 1M</item>-->
<!--        <item>LE 2M</item>-->
<!--        <item>LE Coded S2/S8</item>-->
        <item>All PHY</item>
        <item>LE 1M</item>
        <item>LE Coded</item>
    </string-array>
</resources>
