<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.kenvix.sensorcollector.MainActivity">
    <item
            android:id="@+id/action_settings"
            android:title="@string/action_settings"
            android:orderInCategory="100"
            app:showAsAction="never" />
    <item
            android:id="@+id/show_available_drivers"
            android:title="@string/show_available_drivers"
            android:orderInCategory="100"
            app:showAsAction="never" />
    <item
            android:id="@+id/action_test_device"
            android:title="@string/action_test_device"
            android:orderInCategory="100"
            app:showAsAction="never" />
</menu>
