<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_home" />
        <item
                android:id="@+id/nav_bluetooth_beacon_scanner"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_bluetooth_beacon_scanner" />
        <item
                android:id="@+id/nav_usb_serial_sensor_recorder"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_usb_serial_sensor_recorder" />
    </group>
</menu>
