<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mobile_navigation"
        app:startDestination="@+id/nav_home">

    <fragment
            android:id="@+id/nav_home"
            android:name="com.kenvix.sensorcollector.ui.RecorderFragment"
            android:label="@string/menu_home"
            tools:layout="@layout/fragment_recording" />

    <fragment
            android:id="@+id/nav_bluetooth_beacon_scanner"
            android:name="com.kenvix.sensorcollector.ui.BluetoothScannerFragment"
            android:label="@string/menu_bluetooth_beacon_scanner"
            tools:layout="@layout/fragment_bluetooth_scan" />

    <fragment
            android:id="@+id/nav_usb_serial_sensor_recorder"
            android:name="com.kenvix.sensorcollector.ui.RecorderFragment"
            android:label="@string/menu_usb_serial_sensor_recorder"
            tools:layout="@layout/fragment_recording" />
</navigation>
