<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.kenvix.sensorcollector.ui.RecorderFragment"
        android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:padding="8dp">

        <Button
                android:id="@+id/button_bluetooth_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan_bluetooth"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
            android:id="@+id/bth_name_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:hint="@string/name_filter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_bluetooth_scan"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints="@string/name_filter"
            android:inputType="textFilter" />

    <TextView
            android:layout_height="42dp"
            android:paddingStart="15dp"
            android:paddingEnd="8dp"
            android:textSize="22sp"
            android:text="@string/text_list_of_sensors"
            android:layout_width="wrap_content" />

    <ListView
            android:id="@+id/bth_list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

    </ListView>
</LinearLayout>
