<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.kenvix.sensorcollector.ui.RecorderFragment"
        android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:padding="8dp">

        <Button
                android:id="@+id/button_scan_serial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan_serial"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0.057"
                android:layout_marginTop="2dp" />

        <Button
                android:id="@+id/button_start_recoding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_recoding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0.953"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RadioGroup
            android:id="@+id/output_format_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingEnd="8dp">
        <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/output_format"
                android:layout_weight="3" />
        <RadioButton
                android:id="@+id/output_format_csv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="CSV"
                android:checked="true"
                android:enabled="true"
                android:layout_weight="2"
                tools:ignore="HardcodedText" />

        <RadioButton
                android:id="@+id/output_format_xlsx"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="XLSX"
                android:checked="false"
                android:layout_weight="2"
                tools:ignore="HardcodedText" />
    </RadioGroup>

    <TextView
            android:layout_height="42dp"
            android:paddingStart="15dp"
            android:paddingEnd="8dp"
            android:textSize="22sp"
            android:text="@string/text_list_of_sensors"
            android:layout_width="wrap_content" />

    <ListView
            android:id="@+id/serial_list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

    </ListView>
</LinearLayout>
